# CodeDigest

./: .gitignore  README.md  pyproject.toml
src/: config.py  main.py
src/core/: file_processing.py  openai_api.py  project_structure.py
src/scripts/: generate_descriptions.py  generate_tree.py  process.py  summarize_files.py
src/tests/: test_config.py  test_file_processing.py  test_open_ai_api.py  test_project_structure.py
